--- a/_includes/style.html
+++ b/_includes/style.html
@@ -62,7 +62,7 @@ tr:last-child {
 }
 
 .btn-slides {
-  background-color: #007bff;
+  background-color: #bf3e11;
   color: #fff;
   font-weight: bold;
   font-size: 16px;
